# mcp-server-hyperplexity

./: .env.example  .gitignore  .mcp.json  =1.72.0  AGENT_6_SUMMARY.md  AI_CLIENT_3_TIER_COMPLETE.md  API_EXAMPLES.md  ASYNC_REQUIREMENTS.md  ASYNC_SYSTEM_REVIEW.md  CHECK_SQS_SETUP.md  CITATION_RESOLUTION_BUG.md  CLAUDE.md  COLUMN_TRACKING_ANALYSIS.md  CONFIG_CHANGE_LOG_PRESERVATION_FIX.md  CONFIG_MATCHING_OPTIMIZATIONS.md  Congresses Master List.xlsx  DEPLOYMENT_INSTRUCTIONS.md  DESCRIPTION.md  DETAILS_SHEET_STRIPPING_ANALYSIS.md  DUPLICATE_VALIDATOR_TROUBLESHOOTING.md  Dockerfile  ENHANCED_METRICS_USAGE_EXAMPLE.py  EVENTBRIDGE_MIGRATION_PLAN.md  EXAMPLE_COLUMN_DEFINITION_PROMPT.md  EXAMPLE_ROW_DISCOVERY_PROMPT.md  EXCEL_CORRUPTION_FIX_SUMMARY.md  FEATURES_SUMMARY.md  FIX_SYNC_TO_ASYNC.md  GEMENI.md  GEMINI3_UPGRADE_PLAN.md  IMPLEMENTATION_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS10.md  IMPROVEMENTS11.md  INFRASTRUCTURE_GUIDE.md  LICENSE  MISSING_COLUMNS_FIX.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_TABLE_EXTRACTOR.md  PERFECT_MATCH_FIXES.md  (+85 more)
.claude/: settings.local.json
.gemini_temp/: commit_message.txt
ai_config_generator/: AI_CONFIG_GENERATOR_SPECIFICATION.md  README.md  check_sqs_status.py  claude_api_key.txt  config_generator_conversational.py  config_generator_step2_enhanced.py  direct_test_response_1752616059.json  example_config.json  example_table_config_V01.json  lambda_test_results_1752614573.json  lambda_test_results_1752614595.json  lambda_test_results_1752614641.json  lambda_test_results_1752614920.json  lambda_test_results_1752615346.json  lambda_test_results_1752615496.json  lambda_test_results_1752615918.json  lambda_test_results_1752617229.json  lambda_test_results_1752617474.json  lambda_test_results_1752683177.json
benchmark/: .gitignore  analyze_results.py  ground_truth.py  ground_truth_verified.csv  model_matrix.csv  model_matrix_focused.csv  run_benchmark.py
config_lambda/: CONFIG_LAMBDA_README.md  config_lambda_function.py
deployment/: API_GATEWAY_EMAIL_ENDPOINTS.md  DEMO_CLIENT_README.md  DEMO_SESSION_MANAGER_QUICK_REF.md  DEMO_TESTING_MASTER_GUIDE.md  DEMO_TEST_REPORTER_QUICK_REFERENCE.md  DEMO_TEST_REPORTER_README.md  QUICK_START.md  TEST_ALL_DEMOS_README.md  (+38 more)
(+1564 files in other folders)
