[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-subindex"
version = "1.0.22"
description = "MCP server for Subindex — generate, validate, and fact-check research tables with AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "mcp", "model-context-protocol", "claude", "ai", "llm", "agent",
    "data-validation", "research", "fact-check", "subindex",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
]

[project.urls]
Homepage = "https://subindex.ai"
Documentation = "https://subindex.ai/mcp"
"API Reference" = "https://subindex.ai/api"
Repository = "https://github.com/EliyahuAI/mcp-server-subindex"

[project.scripts]
mcp-server-subindex = "subindex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/subindex_mcp"]
